--- a/styles.css
+++ b/styles.css
@@ -229,8 +229,6 @@ h3:hover {
     flex-direction: column-reverse;
     right: -60%;
     bottom: 70%;
-    width: 100%;
-    height: 100%;
     background: linear-gradient(to top, #000000a6 0%, #000000a6 99vw) no-repeat;
     background-position: top;
     background-size: 100% 0;
@@ -250,9 +248,12 @@ h3:hover {
     background-position: bottom;
     opacity: 1;
   }
-  h1 {
-    background: none;
+  h1,
+  h2,
+  h3 {
     bottom: 1px;
+    background: none;
+    font-size: small;
   }
   .aboutmecontent {
     margin-top: 20%;
@@ -287,10 +288,7 @@ h3:hover {
     background-position: bottom;
     opacity: 1;
   }
-  h2 {
-    bottom: 1px;
-    background: none;
-  }
+
   .achievementscontent {
     margin-top: 20%;
     padding-top: 20%;
@@ -324,10 +322,7 @@ h3:hover {
     background-position: bottom;
     opacity: 1;
   }
-  h3 {
-    background: none;
-    bottom: 1px;
-  }
+
   .contactcontent {
     margin-top: 20%;
     padding-top: 20%;
