--- a/styles.css
+++ b/styles.css
@@ -306,8 +306,10 @@ h3:hover {
 @media screen and (max-width: 1200px) and (orientation: portrait) {
   html {
     height: -webkit-fill-available;
+    height: fill-available;
   }
   body {
+    height: fill-available;
     height: -webkit-fill-available;
   }
   h1,
@@ -351,12 +353,6 @@ h3:hover {
     align-items: center;
   }
 
-  .aboutmecontent.visible {
-    margin: 0;
-    padding: 0;
-    width: 70%;
-    height: 100%;
-  }
   .achievements {
     position: absolute;
     flex-direction: column-reverse;
@@ -390,12 +386,7 @@ h3:hover {
     justify-content: center;
     align-items: center;
   }
-  .achievementscontent.visible {
-    margin: 0;
-    padding: 0;
-    width: 70%;
-    height: 100%;
-  }
+
   ul {
     display: flex;
     flex-direction: column;
@@ -442,8 +433,10 @@ h3:hover {
 @media screen and (max-width: 900px) and (orientation: landscape) {
   html {
     height: -webkit-fill-available;
+    height: fill-available;
   }
   body {
+    height: fill-available;
     height: -webkit-fill-available;
   }
   h1,
@@ -485,9 +478,7 @@ h3:hover {
     justify-content: center;
     align-items: center;
   }
-  .aboutmecontent.visible {
-    height: 80%;
-  }
+
   .achievements {
     position: absolute;
     flex-direction: column-reverse;
@@ -515,14 +506,6 @@ h3:hover {
   }
 
   .achievementscontent {
-    width: 70%;
-    height: 80%;
-    line-height: 0.5rem;
-    font-size: x-small;
-    justify-content: space-around;
-    align-items: center;
-  }
-  .achievementscontent.visible {
     width: 70%;
     height: 80%;
     line-height: 0.5rem;
